# efl-meson-hello-world

./: main.c  meson.build
